Create Layers and Aggregates

--- a/src/Yuxi.Andres.Test.Application/Yuxi.Andres.Test.Application.csproj
+++ b/src/Yuxi.Andres.Test.Application/Yuxi.Andres.Test.Application.csproj
@@ -6,4 +6,23 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yuxi.Andres.Test.Domain\Yuxi.Andres.Test.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="SharedKernel.Application" Version="7.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Commands\" />
+    <None Remove="Queries\" />
+    <None Remove="Commands\LocationCommands\" />
+    <None Remove="Queries\LocationQueries\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Queries\" />
+    <Folder Include="Commands\LocationCommands\" />
+    <Folder Include="Queries\LocationQueries\" />
+  </ItemGroup>
 </Project>
