Add migrations YUXI_TEST_V.0.1

--- a/src/Yuxi.Andres.Test.WebApi/Yuxi.Andres.Test.WebApi.csproj
+++ b/src/Yuxi.Andres.Test.WebApi/Yuxi.Andres.Test.WebApi.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.5" />
     <PackageReference Include="SharedKernel.Api" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
