--- a/src/Yuxi.Andres.Test.Infrastructure/Yuxi.Andres.Test.Infrastructure.csproj
+++ b/src/Yuxi.Andres.Test.Infrastructure/Yuxi.Andres.Test.Infrastructure.csproj
@@ -33,5 +33,9 @@
   <ItemGroup>
     <PackageReference Include="SharedKernel.Infrastructure" Version="7.0.3" />
     <PackageReference Include="Dapper" Version="2.0.123" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
