--- a/src/Yuxi.Andres.Test.WebApi/Yuxi.Andres.Test.WebApi.csproj
+++ b/src/Yuxi.Andres.Test.WebApi/Yuxi.Andres.Test.WebApi.csproj
@@ -22,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
   </ItemGroup>
 
   <ItemGroup>
